--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.4"
   },
